bppackaging/src/objects/Vendor_Order_Header__c.object
<CustomObject>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Progress_VR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Vendor Order Receiving which is using the record</inlineHelpText>
        <label>In Progress VR</label>
        <referenceTo>Vendor_Receiving_Header__c</referenceTo>
        <relationshipLabel>Vendor Order Headers</relationshipLabel>
        <relationshipName>Vendor_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_Date__c</fullName>
        <label>Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Type</label>
        <referenceTo>PO_Type__c</referenceTo>
        <relationshipLabel>Vendor Order Headers</relationshipLabel>
        <relationshipName>Vendor_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Recieved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Recieved</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Order Headers</relationshipLabel>
        <relationshipName>Vendor_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Order Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Status__c</columns>
        <columns>Purchase_Order_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VO-{00000000}</displayFormat>
        <label>Vendor Order Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Order Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>